Refactor codebase to meet enterprise standards